--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint . --ext .js,.jsx",
+    "lint:fix": "eslint . --ext .js,.jsx --fix",
+    "typecheck": "tsc -p tsconfig.typecheck.json --noEmit",
+    "check": "npm run lint && npm run typecheck"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -15,9 +19,11 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "check": "^1.0.0",
     "expo": "~54.0.1",
     "expo-asset": "~12.0.12",
     "expo-av": "~16.0.8",
+    "expo-clipboard": "~8.0.8",
     "expo-font": "~14.0.11",
     "expo-haptics": "~15.0.8",
     "expo-linear-gradient": "~15.0.8",
@@ -36,7 +42,9 @@
     "react-native-webview": "13.15.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2"
+    "@babel/core": "^7.25.2",
+    "eslint": "^8.57.0",
+    "typescript": "^5.8.2"
   },
   "private": true
 }
