--- a/tsconfig.typecheck.json
+++ b/tsconfig.typecheck.json
@@ -6,7 +6,7 @@
     "strict": true,
     "noEmit": true,
     "allowJs": true,
-    "checkJs": true,
+    "checkJs": false,
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
